--- a/app/globals.css
+++ b/app/globals.css
@@ -102,3 +102,14 @@ body {
     }
   }
 }
+
+/* Swiper */
+.swiper-button-prev,
+.swiper-button-next {
+  color: white;
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  font-size: 1.5rem;
+}
